<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_16dp"
    android:background="@color/background_color">

    <Button
        android:id="@+id/buttonCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:drawableEnd="@drawable/calc"
        android:textColor="@color/button_text"
        android:backgroundTint="@color/button_background" />
    <Button
        android:id="@+id/buttonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:drawableEnd="@drawable/list"
        android:textColor="@color/button_text"
        android:backgroundTint="@color/button_background" />

    <Button
        android:id="@+id/buttonWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:drawableEnd="@drawable/weather"
        android:textColor="@color/button_text"
        android:backgroundTint="@color/button_background"
     />
</LinearLayout>

